# Development-Toolkit

./: .gitignore  README.md  aa.py  dsl.py  generator_test.py  global_vars.py  main.py  models.py  pyproject.toml  python_file.py  sanic_test.py  setup.cfg  setup.py  test.py
.github/workflows/: tests.yaml
generators/: igenerator.py
generators/base/: __init__.py  class_generator.py  decorator_generator.py  function_generator.py  raw_code_generator.py
generators/ext/: __init__.py  sanic_handler_generator.py  sql_class_generator.py
sql/: __init__.py  database.py
src/devkit/: logger.py  python_file.py
src/devkit.egg-info/: PKG-INFO  SOURCES.txt
src/devkit/generators/: global_vars.py  igenerator.py  python_file.py
src/devkit/generators/base/: __init__.py  class_generator.py  decorator_generator.py  function_generator.py  (+1 more)
src/devkit/html/: __init__.py  a.py  elements.xsd  elements2.xsd  generator.py  html5.json  html_5.xsd  htmlelement.py  tags.py  tags2.py
src/devkit/infra/: __init__.py  infrastructure.py
src/devkit/sql/: __init__.py  database.py  migrations.py  model_generator_from_schema.py  querying.py  schema_parser.py
src/devkit/tasks/: __init__.py
template/: app.py  infra.py  models.py
template/controllers/: homepage.py
template/views/: homepage.py
tests/project/: database.db  devkit.json  generate-models.py  infra.py  main.py  models.py  query.py  tasks.py  test.py
tests/project/migrations/: migration__1685206806520__5b.sql
tests/unit/: models.py  test_database.py  test_models.py  test_query.py  test_select.py  test_update.py
(+12 files in other folders)
