[metadata]
name = devkit
description = Development toolkit to increase velocity and code quality.
author = Thomas Poelman
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    devkit
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
devkit = py.typed
